# daskify

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  test.ipynb
